# G10_P1

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CacheUtil.cpp  Makefile  cmake_install.cmake  connect_grpc_fuse.cpp  connect_grpc_fuse.h  tafs_rpc.h  unreliablefs.c  unreliablefs_ops.c  unreliablefs_ops.h  wiscAFS.grpc.pb.cc  wiscAFS.proto  wiscAFS_client.cpp  wiscAFS_client.h  wiscAFS_client_copy.cpp  wiscAFS_client_copy.h  wiscAFS_server.cpp
consistency_tests/: test2_clientA.py
filebench-1.4.9.1/: Makefile  configure  filebench  parser_gram.h  parser_lex.c
filebench-1.4.9.1/autom4te.cache/: output.1  traces.1
filebench-1.4.9.1/workloads/: Makefile  Makefile.in
tests/consistency_tests/: 739p1.env  fs_util.py  test1_clientB.py  test2_clientB.py
tests/filebench-1.4.9.1/: Makefile.in  config.status  parser_gram.c
tests/filebench-1.4.9.1/.deps/: flowop.Po  parser_gram.Po
tests/filebench-1.4.9.1/autom4te.cache/: requests  traces.0
tests/filebench_workloads/: filemicro_create.f  filemicro_createfiles.f  filemicro_createrand.f  filemicro_delete.f  filemicro_rread.f  filemicro_rwritedsync.f  filemicro_seqread.f  filemicro_seqwrite.f  filemicro_statfile.f  filemicro_writefsync.f  fileserver.f  mongo.f  set_dir.py  varmail.f  webserver.f
